--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="./style.css">
-    <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
   </head>
   <body>
+    <nav></nav>
+    <section class="main-section"></section>
+    <script src="jquery.js"></script>
+    <script src="data_generator.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
