Format page layout with html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <nav></nav>
-    <section class="main-section"></section>
+    <nav>
+        <div class="logo"><span class="first-letter">T</span>WITTLER</div>
+    </nav>
+    <div class="wrapper">
+        <aside class="col-1-4">
+            <p id="view">Home</p>
+        </aside>
+        <section class="main-section col-1-2"></section>
+    </div>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <script src="./app.js"></script>
