--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Twittler</title>
+    <link rel="shortcut icon" href="./palm-black.ico">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
