Style format and user interaction

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </nav>
     <div class="wrapper">
         <aside class="col-1-4">
-            <p id="view">Home</p>
+            <p id="view">Recent Tweetles</p>
         </aside>
         <section class="main-section col-1-2"></section>
     </div>
