Change favicon to blue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Twittler</title>
-    <link rel="shortcut icon" href="./palm-black.ico">
+    <link rel="shortcut icon" href="./palm-blue.ico">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
